# fairy-story-generator

./: .gitignore  README.md
backend/: .gitignore  README.md  pyproject.toml  test_db.py
backend/story_generator/: __init__.py  config.py  database.py  main.py
backend/story_generator/api/routes/: __init__.py  health.py  stories.py
backend/story_generator/models/: __init__.py  story.py
backend/story_generator/prompts/: __init__.py  story_prompts.py
backend/story_generator/services/: __init__.py  character_name_extractor.py  image_generator.py  story_generator.py  thumbnail_generator.py  voice_generator.py
backend/story_generator/utils/: __init__.py  metrics.py  storage.py  timing.py
backend/story_generator/workers/: __init__.py  scene_worker.py  task_manager.py
frontend/: .env.local  .gitignore  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/create/: page.tsx
frontend/src/app/stories/: page.tsx
frontend/src/app/story/[id]/: page.tsx
frontend/src/components/: ProgressBar.tsx  ScenePlaceholder.tsx
frontend/src/hooks/: useStoryGeneration.ts  useStoryPolling.ts
frontend/src/lib/: api.ts
frontend/src/types/: story.ts
